DOMPurify for SSR and Client envs

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cross-fetch": "^4.0.0",
     "csv-parser": "^3.0.0",
     "domino": "^2.1.6",
+    "dompurify": "^3.2.6",
     "formik": "^2.4.6",
     "github-slugger": "^2.0.0",
     "google-protobuf": "^3.21.4",
@@ -54,6 +55,7 @@
     "graphql-tag": "^2.12.6",
     "graphql-type-json": "^0.3.2",
     "isomorphic-ws": "^5.0.0",
+    "jsdom": "^26.1.0",
     "lexical": "^0.35.0",
     "ln-service": "^57.22.0",
     "macaroon": "^3.0.4",
