--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "graphql-type-json": "^0.3.2",
     "isomorphic-ws": "^5.0.0",
     "jsdom": "^26.1.0",
+    "katex": "^0.16.22",
     "lexical": "^0.35.0",
     "ln-service": "^57.22.0",
     "macaroon": "^3.0.4",
