switch to linkedom from JSDOM, enhance SSR HTML gen

--- a/package.json
+++ b/package.json
@@ -56,9 +56,9 @@
     "graphql-tag": "^2.12.6",
     "graphql-type-json": "^0.3.2",
     "isomorphic-ws": "^5.0.0",
-    "jsdom": "^26.1.0",
     "katex": "^0.16.22",
     "lexical": "^0.35.0",
+    "linkedom": "^0.18.12",
     "ln-service": "^57.22.0",
     "macaroon": "^3.0.4",
     "mathjs": "^13.2.0",
