--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@graphql-tools/schema": "^10.0.6",
     "@lightninglabs/lnc-web": "^0.3.2-alpha",
     "@noble/curves": "^1.6.0",
+    "@noble/hashes": "^2.0.1",
     "@nostr-dev-kit/ndk": "^2.12.2",
     "@nostr-dev-kit/ndk-wallet": "^0.5.0",
     "@opensearch-project/opensearch": "^2.12.0",
