do media checks with the capture microservice

--- a/.env.production
+++ b/.env.production
@@ -7,6 +7,7 @@ NEXTAUTH_URL=https://stacker.news
 NEXTAUTH_URL_INTERNAL=http://127.0.0.1:8080/api/auth
 NEXT_PUBLIC_AWS_UPLOAD_BUCKET=snuploads
 NEXT_PUBLIC_IMGPROXY_URL=https://imgprxy.stacker.news/
+NEXT_PUBLIC_MEDIA_CHECK_URL=https://capture.stacker.news/media
 NEXT_PUBLIC_MEDIA_DOMAIN=m.stacker.news
 PUBLIC_URL=https://stacker.news
 SELF_URL=http://127.0.0.1:8080
