--- a/.env.development
+++ b/.env.development
@@ -116,6 +116,11 @@ NEXT_PUBLIC_EXTRA_LONG_POLL_INTERVAL_MS=300000
 IMGPROXY_URL_DOCKER=http://imgproxy:8080
 MEDIA_URL_DOCKER=http://s3:4566/uploads
 
+# media check with capture container
+MEDIA_CHECK_ROUTE=media
+MEDIA_CHECK_URL_DOCKER=http://capture:5678/media
+NEXT_PUBLIC_MEDIA_CHECK_URL=http://localhost:5678/media
+
 # postgres container stuff
 POSTGRES_PASSWORD=password
 POSTGRES_USER=sn
