--- a/capture/package.json
+++ b/capture/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.20.0",
+    "magic-bytes.js": "^1.12.1",
     "puppeteer": "^20.8.2"
   },
   "type": "module"
