add CORS, add comment about Express automatic decodeURIComponent, integrate capture in the images compose profile, address useEffect bug

--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 PRISMA_SLOW_LOGS_MS=
 GRAPHQL_SLOW_LOGS_MS=
 NODE_ENV=development
-COMPOSE_PROFILES='minimal,images,search,payments,wallets,email,capture'
+COMPOSE_PROFILES='minimal,images,search,payments,wallets,email'
 
 ############################################################################
 # OPTIONAL SECRETS                                                         #
@@ -117,7 +117,6 @@ IMGPROXY_URL_DOCKER=http://imgproxy:8080
 MEDIA_URL_DOCKER=http://s3:4566/uploads
 
 # media check with capture container
-MEDIA_CHECK_ROUTE=media
 MEDIA_CHECK_URL_DOCKER=http://capture:5678/media
 NEXT_PUBLIC_MEDIA_CHECK_URL=http://localhost:5678/media
 
