--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,7 +86,7 @@ services:
     restart: unless-stopped
     depends_on: *depends_on_app
     profiles:
-      - capture
+      - images
     healthcheck:
       <<: *healthcheck
       test: ["CMD", "curl", "-f", "http://localhost:5678/health"]
