--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,7 @@ services:
     depends_on: *depends_on_app
     profiles:
       - capture
+      - images
     healthcheck:
       <<: *healthcheck
       test: ["CMD", "curl", "-f", "http://localhost:5678/health"]
