revert removal of capture profile, start capture if capture/images profile is passed

--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 PRISMA_SLOW_LOGS_MS=
 GRAPHQL_SLOW_LOGS_MS=
 NODE_ENV=development
-COMPOSE_PROFILES='minimal,images,search,payments,wallets,email'
+COMPOSE_PROFILES='minimal,images,search,payments,wallets,email,capture'
 
 ############################################################################
 # OPTIONAL SECRETS                                                         #
