--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,6 +88,7 @@ services:
     depends_on: *depends_on_app
     profiles:
       - images
+      - capture
     healthcheck:
       <<: *healthcheck
       test: ["CMD", "curl", "-f", "http://localhost:5678/health"]
