add NEXT_PUBLIC_URL to capture manifest (+ do media check in imgproxy worker)

--- a/copilot/capture/manifest.yml
+++ b/copilot/capture/manifest.yml
@@ -45,6 +45,7 @@ variables:                    # Pass environment variables as key value pairs.
   CAPTURE_URL: https://stacker.news/
   MAX_PAGES: 10
   TIMEOUT: 3000
+  NEXT_PUBLIC_URL: https://stacker.news
 
 #secrets:                      # Pass secrets from AWS Systems Manager (SSM) Parameter Store.
 #  GITHUB_TOKEN: GITHUB_TOKEN  # The key is the name of the environment variable, the value is the name of the SSM parameter.
