enhance: improve media type recognition with HEAD or magic bytes (#2599)
* enhance: improve media type recognition by fetching HEAD or reading its first (magic) bytes

* add origin protection, handle links behind basic auth

* rollback export from createImgproxyPath

* fix api return statements, protect url swap

* light cleanup

* fix wrong fetch url light cleanup

* amend this

* do media checks with the capture microservice

* fix media check import

* we don't need to abort on imgproxy

* bail on auth; handle abort via exception; affirm HEAD

* ensure url is correct for sndev

* add CORS, add comment about Express automatic decodeURIComponent, integrate capture in the images compose profile, address useEffect bug

* best practice: use startsWith for sndev URL replacement

* remove capture from dmenu profile, restrict CORS to the /media endpoint

* revert removal of capture profile, start capture if capture/images profile is passed

* add NEXT_PUBLIC_URL to capture manifest (+ do media check in imgproxy worker)

---------

Co-authored-by: k00b <k00b@stacker.news>

--- a/capture/package.json
+++ b/capture/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.20.0",
+    "magic-bytes.js": "^1.12.1",
     "puppeteer": "^20.8.2"
   },
   "type": "module"
